<resources>
    <string name="app_name">WeFrame</string>
    <string name="password">Password</string>
    <string name="email">Email</string>
    <string name="ingresar">Ingresar</string>
    <string name="session_email">session-email</string>
    <string name="session_token">session-token</string>
    <string name="session_shared_preferences_file">session-shared-preferences</string>
    <string name="images">Images</string>
    <string name="images_uploaded">Imagenes subidas</string>
    <string name="take_picture">Sacar foto</string>
    <string name="settings">Configuracion</string>
    <string name="image_thumbnail">image-thumbnail</string>
    <string name="remove">Eliminar</string>
    <string name="upload">Subir</string>
</resources>
